# polars-intro

./: .gitignore  LICENSE  README.md  custom.css  index.html  polars_intro.ipynb  polars_intro.slides.html  pyproject.toml  requirements.txt
polars_intro/: __init__.py  download_data.py  polars_intro.py
